(library
 (name lambda_lib)
 (public_name Lambda.Lib)
 (modules Ast Interpret Parser Utils)
 (libraries base angstrom)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show ppx_inline_test ppx_expect))
 (inline_tests))

 (library
 (name tests)
 (modules tests)
 (libraries lambda_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
